# Aval-OS-R3

./: Cargo.toml  README.md
.VSCodeCounter/2023-04-05_16-58-43/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
bootloader/: boot.asm
src/: GDT.rs  IDT.rs  Message.rs  Process.rs  Scheduler.rs  interrupts.rs  main.rs  memory.rs  panic.rs  serial.rs
